--- a/app/src/main/res/layout/rubix_cube.xml
+++ b/app/src/main/res/layout/rubix_cube.xml
@@ -4,9 +4,27 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="mobileapps.cse5236.cubr.Square"
+    tools:context="mobileapps.cse5236.cubr.GameSession"
     android:background="#00000000">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="00:00:0.0"
+        android:id="@+id/timer"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Exit"
+        android:id="@+id/exitButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
     <ImageView
         android:layout_width="50dp"
@@ -15,7 +33,8 @@
         android:adjustViewBounds="true"
         android:id="@+id/topLeft"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:background="#00000000" />
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -23,7 +42,8 @@
         android:adjustViewBounds="true"
         android:id="@+id/topRight"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/topLeft"/>
+        android:layout_toRightOf="@+id/topLeft"
+        android:background="#00000000" />
 
 
     <ImageView
@@ -33,7 +53,8 @@
         android:adjustViewBounds="true"
         android:id="@+id/bottomLeft"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/topLeft"/>
+        android:layout_below="@id/topLeft"
+        android:background="#00000000"/>
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -41,7 +62,8 @@
         android:adjustViewBounds="true"
         android:id="@+id/bottomRight"
         android:layout_below="@+id/topRight"
-        android:layout_toRightOf="@id/bottomLeft"/>
+        android:layout_toRightOf="@id/bottomLeft"
+        android:background="#00000000"/>
 
 
 </RelativeLayout>
