--- a/app/src/main/res/layout/rubix_cube.xml
+++ b/app/src/main/res/layout/rubix_cube.xml
@@ -15,7 +15,51 @@
         android:layout_height="50dp"
         android:adjustViewBounds="true"
         android:background="@android:color/black"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        android:layout_alignBottom="@+id/leftButton"
+        android:layout_toLeftOf="@+id/exitButton"
+        android:layout_toStartOf="@+id/exitButton"
+        android:layout_marginRight="36dp"
+        android:layout_marginEnd="36dp" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Up"
+        android:id="@+id/upButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/viewChanger"
+        android:layout_alignEnd="@+id/viewChanger" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Right"
+        android:id="@+id/rightButton"
+        android:layout_below="@+id/upButton"
+        android:layout_toRightOf="@+id/upButton"
+        android:layout_toEndOf="@+id/upButton" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Down"
+        android:id="@+id/downButton"
+        android:layout_below="@+id/rightButton"
+        android:layout_alignLeft="@+id/viewChanger"
+        android:layout_alignStart="@+id/viewChanger" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Left"
+        android:id="@+id/leftButton"
+        android:layout_below="@+id/upButton"
+        android:layout_toLeftOf="@+id/viewChanger"/>
 
     <TextView
         android:id="@+id/timer"
