--- a/app/src/main/res/layout/rubix_cube.xml
+++ b/app/src/main/res/layout/rubix_cube.xml
@@ -38,14 +38,14 @@
 
 
     <!--TODO Figure this fucking piece of bullshit out, goddammit.-->
-    <!--com.facebook.login.widget.LoginButton
+    <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" /-->
+        android:layout_alignParentStart="true"/>
 
     <GridLayout
         android:id="@+id/rubixCube"
