--- a/app/src/main/res/layout/rubix_cube.xml
+++ b/app/src/main/res/layout/rubix_cube.xml
@@ -84,6 +84,11 @@
         android:text="00:00:0.0"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -91,16 +96,21 @@
         android:id="@+id/highScoreButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true" />
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Share"
+        android:id="@+id/facebook"
+        />
     <Button
         android:id="@+id/exitButton"
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="Exit"
         android:layout_alignParentRight="true" />
+    </LinearLayout>
 
     <!-- Row and Column rotation buttons-->
     <Button
@@ -182,16 +192,6 @@
         android:layout_toLeftOf="@+id/rowTwoButton"
         android:layout_toStartOf="@+id/rowTwoButton"
         android:background="@drawable/down_arrow" />
-
-    <!--TODO Figure this fucking piece of bullshit out, goddammit.-->
-    <!--com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>-->
 
     <GridLayout
         android:id="@+id/rubixCube"
