Replaced superfluous ColorBlindModeIsOn if-else statements, added a hard color blind mode button because my phone does not have a menu button. (This will be useful for the demonstration, just go with it.)

--- a/app/src/main/res/layout/rubix_cube.xml
+++ b/app/src/main/res/layout/rubix_cube.xml
@@ -88,7 +88,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:id="@+id/linearLayout">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -231,5 +232,17 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY" />
     </GridLayout>
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Toggle Color Blind Mode"
+        android:id="@+id/colorBlindButton"
+        android:layout_above="@+id/linearLayout"
+        android:layout_alignLeft="@+id/linearLayout"
+        android:layout_alignStart="@+id/linearLayout"
+        android:layout_alignRight="@+id/linearLayout"
+        android:layout_alignEnd="@+id/linearLayout" />
 
 </RelativeLayout>
